--- a/CultivosCiclicosWeb/package.json
+++ b/CultivosCiclicosWeb/package.json
@@ -23,6 +23,7 @@
     "@swimlane/ngx-datatable": "^20.1.0",
     "angular-material-expansion-panel": "^0.7.2",
     "bootstrap": "^5.2.2",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
